src/test/ui/impl-trait/issue-55872-1.stderr
error[E0277]: the trait bound `S: Copy` is not satisfied in `(S, T)`
  --> $DIR/issue-55872-1.rs:12:14
   |
LL |     type E = impl Copy;
   |              ^^^^^^^^^ within `(S, T)`, the trait `Copy` is not implemented for `S`
   |
   = note: required because it appears within the type `(S, T)`
   = note: the return type of a function must have a statically known size
help: consider further restricting this bound
   |
LL | impl<S: Default + Copy> Bar for S {
   |                 ^^^^^^

error[E0277]: the trait bound `T: Copy` is not satisfied in `(S, T)`
  --> $DIR/issue-55872-1.rs:12:14
   |
LL |     type E = impl Copy;
   |              ^^^^^^^^^ within `(S, T)`, the trait `Copy` is not implemented for `T`
   |
   = note: required because it appears within the type `(S, T)`
   = note: the return type of a function must have a statically known size
help: consider further restricting this bound
   |
LL |     fn foo<T: Default + Copy>() -> Self::E {
   |                       ^^^^^^

error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-55872-1.rs:16:37
   |
LL |       fn foo<T: Default>() -> Self::E {
   |  _____________________________________^
LL | |
LL | |         (S::default(), T::default())
LL | |     }
   | |_____^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
